--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,8 @@
         <span class="header__telephone__timetable">
           Круглосуточный прием звонков:
         </span><br>
-        <a href="tel:+7 (917) 240-66-30" class="header__telephone__number">
-          +7 (917) 240-66-30
+        <a href="tel:+7 (85558) 3-32-32" class="header__telephone__number">
+          +7 (85558) 3-32-32
         </a><br>
         <a href="tel:+7 (917) 240-66-30" class="header__telephone__number">
           +7 (917) 240-77-40
@@ -323,6 +323,8 @@
 
 
   <main class="page-main">
+
+
     <section class="slide-section">
       <div class="slide-element" id="slide-1">
         <div class="slide__bg">
@@ -339,7 +341,7 @@
       </div>
       <div class="slide-element" id="slide-2">
         <div class="slide__bg">
-          <img src="images/hotel.jpg" alt="тест картинка">
+          <img src="images/hotel2.jpg" alt="тест картинка">
         </div>
         <div class="slide__description">
           <h3 class="slide__description__title">
@@ -352,7 +354,7 @@
       </div>
       <div class="slide-element" id="slide-3">
         <div class="slide__bg">
-          <img src="images/hotel.jpg" alt="тест картинка">
+          <img src="images/hotel3.jpg" alt="тест картинка">
         </div>
         <div class="slide__description">
           <h3 class="slide__description__title">
@@ -732,6 +734,65 @@
           <div class="equipment__description-6"></div>
           <div class="equipment__description-7"></div>
         </div>
+      </div>
+    </section>
+
+
+    <section class="faq">
+
+      <div class="unit-title">
+        <span class="faq-icon">
+          Часто задаваемые вопросы
+        </span>
+      </div>
+
+      <input type="radio" name="faq-name" id="faq-num1">
+      <input type="radio" name="faq-name" id="faq-num2">
+      <input type="radio" name="faq-name" id="faq-num3">
+      <input type="radio" name="faq-name" id="faq-num4">
+      <input type="radio" name="faq-name" id="faq-num5">
+      <input type="radio" name="faq-name" id="faq-num6">
+
+      <div class="faq__questions-wrapper">
+        <label for="faq-num1" class="faq__question">Обязательно ли при себе иметь ИППСУ
+          (индивидуальную программу предоставления социальных услуг)?
+          <div class="faq__answer">Если вы поступаете на условиях частичной
+            оплаты, ИППСУ при себе иметь обязательно. При условиях полной
+            оплаты, ИППСУ не обязательна.</div>
+        </label>
+        <label for="faq-num2" class="faq__question">Можно ли пройти услуги без проживания в
+          центре?
+          <div class="faq__answer">Конечно. Если для Вас это приемлемо, то все
+            услуги в центре можно получить амбулаторно, без проживания.
+            Ознакомиться с ценами на платные услуги можно
+            <a href="">здесь.</a></div>
+        </label>
+        <label for="faq-num3" class="faq__question">Есть ли у вас ограничения по возрасту для
+          пожилых пациентов?
+          <div class="faq__answer">Мы принимаем пожилых пациентов без
+            ограничения по возрасту. Есть лишь ограничения по медицинским
+            показаниям, общие для санаторно-курортного лечения, например:
+            инфекционные заболевания, тяжёлая форма деменции и т.д. В любом
+            случае Вам необходимо проконсультироваться с врачом. Позвоните
+            по телефону <a href="tel:+7 (85558) 3-32-32"> 8 (85558) 3-32-32</a>
+          </div>
+        </label>
+        <label for="faq-num4" class="faq__question">Принимаете ли вы пациентов с ограниченными
+          возможностями передвижения?
+          <div class="faq__answer">Мы принимаем клиентов способных  к
+            самообслуживанию. В центре организована доступная среда, имеется
+            лифт, пандус и поручни. Дополнительная информация по телефону
+            <a href="tel:+7 (85558) 3-32-32"> 8 (85558) 3-32-32</a></div>
+        </label>
+        <label for="faq-num5" class="faq__question">Брать ли с собой лекарства?
+          <div class="faq__answer">Конечно. Если Вы регулярно принимаете
+            лекарственные препараты по назначению врача, Вам необходимо взять
+            с собой запас этих препаратов на весь период лечения.</div>
+        </label>
+        <label for="faq-num6" class="faq__question">Принимаются ли в учреждение дети до 18 лет?
+          <div class="faq__answer">Принимаются, для получения дополнительных
+            платных услуг.</div>
+        </label>
       </div>
     </section>
   </main>
