--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="header__email">
         Напишите нам письмо:<br>
-        <a href="mailto:test-email@shatlyk.ru">test-email@shatlyk.ru</a>
+        <a href="mailto:shatlykcsp@yandex.ru">shatlykcsp@yandex.ru</a>
         <br>(по любым вопросам)
       </div>
       <div class="header__telephone">
@@ -58,8 +58,8 @@
         <a href="tel:+7 (85558) 3-32-32" class="header__telephone__number">
           +7 (85558) 3-32-32
         </a><br>
-        <a href="tel:+7 (917) 240-66-30" class="header__telephone__number">
-          +7 (917) 240-77-40
+        <a href="tel:+7 (987) 291-30-33" class="header__telephone__number">
+          +7 (987) 291-30-33
         </a>
       </div>
 
@@ -510,6 +510,84 @@
 
 
 
+    <section class="this-important">
+      <div class="unit-title">
+        <span class="important-icon">
+          Это важно
+        </span>
+      </div>
+
+      <div class="important__programs-wrapper">
+
+        <div class="program-card">
+          <h4 class="program-card__title">Lorem ipsum dolor sit.</h4>
+          <p class="program-card__description">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Praesentium voluptatem corrupti
+            repellendus, cum eveniet inventore modi pariatur, assumenda
+            ratione dolorum?</p>
+          <span class="program-card__price">11 150 руб.</span>
+          <a href="#" class="program-card__read-more">
+            Подробнее
+          </a>
+        </div>
+
+        <div class="program-card">
+          <h4 class="program-card__title">Lorem ipsum dolor sit.</h4>
+          <p class="program-card__description">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Praesentium voluptatem corrupti
+            repellendus, cum eveniet inventore modi pariatur, assumenda
+            ratione dolorum?</p>
+          <span class="program-card__price">11 150 руб.</span>
+          <a href="#" class="program-card__read-more">
+            Подробнее
+          </a>
+        </div>
+
+
+        <div class="program-card">
+          <h4 class="program-card__title">Lorem ipsum dolor sit.</h4>
+          <p class="program-card__description">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Praesentium voluptatem corrupti
+            repellendus, cum eveniet inventore modi pariatur, assumenda
+            ratione dolorum?</p>
+          <span class="program-card__price">11 150 руб.</span>
+          <a href="#" class="program-card__read-more">
+            Подробнее
+          </a>
+        </div>
+
+
+        <div class="program-card">
+          <h4 class="program-card__title">Lorem ipsum dolor sit.</h4>
+          <p class="program-card__description">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Praesentium voluptatem corrupti
+            repellendus, cum eveniet inventore modi pariatur, assumenda
+            ratione dolorum?</p>
+          <span class="program-card__price">11 150 руб.</span>
+          <a href="#" class="program-card__read-more">
+            Подробнее
+          </a>
+        </div>
+
+
+        <div class="program-card">
+          <h4 class="program-card__title">Lorem ipsum dolor sit.</h4>
+          <p class="program-card__description">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Praesentium voluptatem corrupti
+            repellendus, cum eveniet inventore modi pariatur, assumenda
+            ratione dolorum?</p>
+          <span class="program-card__price">11 150 руб.</span>
+          <a href="#" class="program-card__read-more">
+            Подробнее
+          </a>
+        </div>
+
+
+      </div>
+    </section>
+
+
+
     <section class="photo">
       <div class="unit-title">
         <span class="photo-icon">
@@ -564,6 +642,23 @@
         сохраняются и по настоящее время. (Нет)
       </span>
       <div class="medical-staff__profiles-wrapper">
+        <div class="profiles-wrapper__person">
+          <div class="person__photo">
+            <img src="images/random.jpg" alt="">
+          </div>
+          <span class="person__full-name">
+            Рандомный челик
+          </span>
+          <span class="person__description">
+            <span class="characteristic">Должность:<br></span>
+            Заместитель директора по медицинской части<br>
+            <span class="characteristic">Специальность:<br></span>
+            Врач-кардиолог<br>
+            <span class="characteristic">Квалификация:<br></span>
+            Кандидат медицинских наук
+          </span>
+        </div>
+
         <div class="profiles-wrapper__person">
           <div class="person__photo">
             <img src="images/random.jpg" alt="">
