--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Санаторий Шатлык</title>
+	<title>Клинический центр Шатлык</title>
   <link rel="icon" type="image/png" href="favicon.png"/>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -78,100 +78,39 @@
     <nav class="main-nav">
       <ul class="nav-wrapper">
         <li class="main-nav__tab--active"><a href="">Главная</a></li>
+
         <li class="main-nav__tab"><a href="#">О центре</a>
           <div class="tab__submenu">
             <div class="submenu__element">
-              <a href="#">
+              <a href="about-us.html">
                 <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
+                <span class="element__name">Подробнее о нас</span>
               </a>
             </div>
             <div class="submenu__element">
               <a href="#">
                 <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
+                <span class="element__name">Наши документы и награды</span>
               </a>
             </div>
             <div class="submenu__element">
               <a href="#">
                 <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
+                <span class="element__name">Стихи о центре</span>
               </a>
             </div>
             <div class="submenu__element">
               <a href="#">
                 <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
+                <span class="element__name">Инфраструктура центра</span>
               </a>
             </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-
           </div>
         </li>
+
         <li class="main-nav__tab"><a href="#">Специалисты</a>
-          <div class="tab__submenu">
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-
-          </div>
         </li>
+
         <li class="main-nav__tab"><a href="#">Номерной фонд</a>
           <div class="tab__submenu">
             <div class="submenu__element">
@@ -219,53 +158,10 @@
 
           </div>
         </li>
-        <li class="main-nav__tab"><a href="#">Формы работы</a>
-          <div class="tab__submenu">
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
-            <div class="submenu__element">
-              <a href="#">
-                <div class="element__img"></div>
-                <span class="element__name">Submenu Element</span>
-              </a>
-            </div>
 
-          </div>
+        <li class="main-nav__tab"><a href="#">Формы работы</a>
         </li>
+
         <li class="main-nav__tab"><a href="#">Услуги</a>
           <div class="tab__submenu">
             <div class="submenu__element">
@@ -313,9 +209,16 @@
 
           </div>
         </li>
-        <li class="main-nav__tab"><a href="#">Тарифы</a></li>
-        <li class="main-nav__tab"><a href="#">Отзывы</a></li>
-        <li class="main-nav__tab"><a href="#">Контакты</a></li>
+
+        <li class="main-nav__tab"><a href="#">Тарифы</a>
+        </li>
+
+        <li class="main-nav__tab"><a href="#">Отзывы</a>
+        </li>
+
+        <li class="main-nav__tab"><a href="#">Контакты</a>
+        </li>
+
       </ul>
     </nav>
   </header>
@@ -639,91 +542,79 @@
         врачей и сестер – это визитная карточка санатория. Те навыки,
         которые были получены, и, те традиции, которые сформировались
         во времена работы с первыми лицами советского государства,
-        сохраняются и по настоящее время. (Нет)
+        сохраняются и по настоящее время.
       </span>
       <div class="medical-staff__profiles-wrapper">
         <div class="profiles-wrapper__person">
           <div class="person__photo">
-            <img src="images/random.jpg" alt="">
+            <img src="images/random.png" alt="">
           </div>
           <span class="person__full-name">
-            Рандомный челик
+            Камалова Венера Гизаровна
           </span>
           <span class="person__description">
             <span class="characteristic">Должность:<br></span>
-            Заместитель директора по медицинской части<br>
+            Специалист по социальной работе<br>
             <span class="characteristic">Специальность:<br></span>
             Врач-кардиолог<br>
             <span class="characteristic">Квалификация:<br></span>
-            Кандидат медицинских наук
+            Кандидат медицинских наук<br>
+            <span class="characteristic">Стаж:<br></span>
+            15 лет
           </span>
         </div>
-
         <div class="profiles-wrapper__person">
           <div class="person__photo">
-            <img src="images/random.jpg" alt="">
+            <img src="images/random.png" alt="">
           </div>
           <span class="person__full-name">
-            Рандомный челик
+            Абрамова Галина Алексеевна
           </span>
           <span class="person__description">
             <span class="characteristic">Должность:<br></span>
-            Заместитель директора по медицинской части<br>
+            Мед. Сестра (ночная)<br>
             <span class="characteristic">Специальность:<br></span>
             Врач-кардиолог<br>
             <span class="characteristic">Квалификация:<br></span>
-            Кандидат медицинских наук
+            Кандидат медицинских наук<br>
+            <span class="characteristic">Стаж:<br></span>
+            40 лет
           </span>
         </div>
-
         <div class="profiles-wrapper__person">
           <div class="person__photo">
-            <img src="images/random.jpg" alt="">
+            <img src="images/random.png" alt="">
           </div>
           <span class="person__full-name">
-            Рандомный челик
+            Зарипова Назиря Гиздатулловна
           </span>
           <span class="person__description">
             <span class="characteristic">Должность:<br></span>
-            Заместитель директора по медицинской части<br>
+            Инструктор ЛФК<br>
             <span class="characteristic">Специальность:<br></span>
             Врач-кардиолог<br>
             <span class="characteristic">Квалификация:<br></span>
-            Кандидат медицинских наук
+            Кандидат медицинских наук<br>
+            <span class="characteristic">Стаж:<br></span>
+            27 лет
           </span>
         </div>
-
         <div class="profiles-wrapper__person">
           <div class="person__photo">
-            <img src="images/random.jpg" alt="">
+            <img src="images/random.png" alt="">
           </div>
           <span class="person__full-name">
-            Рандомный челик
+            Исхакова Ильдуся Гильмутдиновна
           </span>
           <span class="person__description">
             <span class="characteristic">Должность:<br></span>
-            Заместитель директора по медицинской части<br>
+            Мед. Сестра (ночная)<br>
             <span class="characteristic">Специальность:<br></span>
             Врач-кардиолог<br>
             <span class="characteristic">Квалификация:<br></span>
-            Кандидат медицинских наук
-          </span>
-        </div>
-
-        <div class="profiles-wrapper__person">
-          <div class="person__photo">
-            <img src="images/random.jpg" alt="">
-          </div>
-          <span class="person__full-name">
-            Рандомный челик
-          </span>
-          <span class="person__description">
-            <span class="characteristic">Должность:<br></span>
-            Заместитель директора по медицинской части<br>
-            <span class="characteristic">Специальность:<br></span>
-            Врач-кардиолог<br>
-            <span class="characteristic">Квалификация:<br></span>
-            Кандидат медицинских наук
+            Кандидат медицинских наук<br>
+            <span class="characteristic">Стаж:<br></span>
+            42 года
           </span>
         </div>
       </div>
@@ -888,6 +779,17 @@
           <div class="faq__answer">Принимаются, для получения дополнительных
             платных услуг.</div>
         </label>
+      </div>
+    </section>
+
+    <section class="ymaps">
+      <div class="unit-title">
+        <span class="ymaps-icon">
+          Адрес
+        </span>
+      </div>
+      <div class="map-wrapper">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe257753f3537a1416370c5fb582451f3726c92f8de8d3bb62ee0863f11d3d5f&amp;lang=ru_RU&amp;scroll=false"></script>
       </div>
     </section>
   </main>
