бэкап, который запоздал

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -247,7 +247,7 @@
     </section>
 
     <section class="page-about__text">
-      <h2 class="page-about__title">Центр социальной помощи «Шатлык»</h2>
+      <h2 class="note__title">Центр социальной помощи «Шатлык»</h2>
 
       <p class="page-about__paragraph">«Шатлык» расположен в самом живописном и
         уютном уголке  города Заинск. Рядом с центром расположился парк имени
