--- a/app/doctors/doctors.html
+++ b/app/doctors/doctors.html
@@ -240,34 +240,34 @@
       </div>
     </section>
 
-    <section class="doctors">
-      <h1 class="doctors__title">Специалисты</h1>
-      <div class="doctors__wrapper">
-        <article class="doctors__card clearfix">
-          <img src="../images/random.png" alt="" class="doctors__photo">
-          <div class="doctors__info">
-            <span class="doctors__name">Иванов Иван Иванович</span>
-            <p class="doctors__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, sit, placeat. Mollitia quidem facilis error, iste quisquam fugit repellat assumenda deleniti perspiciatis atque, hic, similique dolorem eius distinctio. Omnis reprehenderit nostrum sunt consequuntur perspiciatis a consequatur accusamus natus eum pariatur vel quasi voluptatum nemo ratione, tenetur dolores qui cum possimus enim saepe hic unde voluptatem quidem? Voluptatum, molestiae, nesciunt deleniti mollitia illo maxime nostrum repellendus nam et explicabo aperiam sed. Qui, adipisci culpa veniam omnis quo aut ipsa, eius repudiandae sint commodi praesentium assumenda sequi similique tempore provident consequatur rem alias velit doloremque. Ut ab ex, veniam perspiciatis aut sit.
+    <section class="note">
+      <h1 class="note__title">Специалисты</h1>
+      <div class="note__wrapper">
+        <article class="note__card clearfix">
+          <img src="../images/random.png" alt="" class="note__photo">
+          <div class="note__info">
+            <span class="note__name">Иванов Иван Иванович</span>
+            <p class="note__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, sit, placeat. Mollitia quidem facilis error, iste quisquam fugit repellat assumenda deleniti perspiciatis atque, hic, similique dolorem eius distinctio. Omnis reprehenderit nostrum sunt consequuntur perspiciatis a consequatur accusamus natus eum pariatur vel quasi voluptatum nemo ratione, tenetur dolores qui cum possimus enim saepe hic unde voluptatem quidem? Voluptatum, molestiae, nesciunt deleniti mollitia illo maxime nostrum repellendus nam et explicabo aperiam sed. Qui, adipisci culpa veniam omnis quo aut ipsa, eius repudiandae sint commodi praesentium assumenda sequi similique tempore provident consequatur rem alias velit doloremque. Ut ab ex, veniam perspiciatis aut sit.
             </p>
-            <a href="#" class="doctors__see-more">Читать далее >></a>
+            <a href="#" class="note__see-more">Читать далее >></a>
           </div>
         </article>
-        <article class="doctors__card clearfix">
-          <img src="../images/random.png" alt="" class="doctors__photo">
-          <div class="doctors__info">
-            <span class="doctors__name">Иванов Иван Иванович</span>
-            <p class="doctors__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, sit, placeat. Mollitia quidem facilis error, iste quisquam fugit repellat assumenda deleniti perspiciatis atque, hic, similique dolorem eius distinctio. Omnis reprehenderit nostrum sunt consequuntur perspiciatis a consequatur accusamus natus eum pariatur vel quasi voluptatum nemo ratione, tenetur dolores qui cum possimus enim saepe hic unde voluptatem quidem? Voluptatum, molestiae, nesciunt deleniti mollitia illo maxime nostrum repellendus nam et explicabo aperiam sed. Qui, adipisci culpa veniam omnis quo aut ipsa, eius repudiandae sint commodi praesentium assumenda sequi similique tempore provident consequatur rem alias velit doloremque. Ut ab ex, veniam perspiciatis aut sit.
+        <article class="note__card clearfix">
+          <img src="../images/random.png" alt="" class="note__photo">
+          <div class="note__info">
+            <span class="note__name">Иванов Иван Иванович</span>
+            <p class="note__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, sit, placeat. Mollitia quidem facilis error, iste quisquam fugit repellat assumenda deleniti perspiciatis atque, hic, similique dolorem eius distinctio. Omnis reprehenderit nostrum sunt consequuntur perspiciatis a consequatur accusamus natus eum pariatur vel quasi voluptatum nemo ratione, tenetur dolores qui cum possimus enim saepe hic unde voluptatem quidem? Voluptatum, molestiae, nesciunt deleniti mollitia illo maxime nostrum repellendus nam et explicabo aperiam sed. Qui, adipisci culpa veniam omnis quo aut ipsa, eius repudiandae sint commodi praesentium assumenda sequi similique tempore provident consequatur rem alias velit doloremque. Ut ab ex, veniam perspiciatis aut sit.
             </p>
-            <a href="#" class="doctors__see-more">Читать далее >></a>
+            <a href="#" class="note__see-more">Читать далее >></a>
           </div>
         </article>
-        <article class="doctors__card clearfix">
-          <img src="../images/random.png" alt="" class="doctors__photo">
-          <div class="doctors__info">
-            <span class="doctors__name">Иванов Иван Иванович</span>
-            <p class="doctors__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, sit, placeat. Mollitia quidem facilis error, iste quisquam fugit repellat assumenda deleniti perspiciatis atque, hic, similique dolorem eius distinctio. Omnis reprehenderit nostrum sunt consequuntur perspiciatis a consequatur accusamus natus eum pariatur vel quasi voluptatum nemo ratione, tenetur dolores qui cum possimus enim saepe hic unde voluptatem quidem? Voluptatum, molestiae, nesciunt deleniti mollitia illo maxime nostrum repellendus nam et explicabo aperiam sed. Qui, adipisci culpa veniam omnis quo aut ipsa, eius repudiandae sint commodi praesentium assumenda sequi similique tempore provident consequatur rem alias velit doloremque. Ut ab ex, veniam perspiciatis aut sit.
+        <article class="note__card clearfix">
+          <img src="../images/random.png" alt="" class="note__photo">
+          <div class="note__info">
+            <span class="note__name">Иванов Иван Иванович</span>
+            <p class="note__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, sit, placeat. Mollitia quidem facilis error, iste quisquam fugit repellat assumenda deleniti perspiciatis atque, hic, similique dolorem eius distinctio. Omnis reprehenderit nostrum sunt consequuntur perspiciatis a consequatur accusamus natus eum pariatur vel quasi voluptatum nemo ratione, tenetur dolores qui cum possimus enim saepe hic unde voluptatem quidem? Voluptatum, molestiae, nesciunt deleniti mollitia illo maxime nostrum repellendus nam et explicabo aperiam sed. Qui, adipisci culpa veniam omnis quo aut ipsa, eius repudiandae sint commodi praesentium assumenda sequi similique tempore provident consequatur rem alias velit doloremque. Ut ab ex, veniam perspiciatis aut sit.
             </p>
-            <a href="#" class="doctors__see-more">Читать далее >></a>
+            <a href="#" class="note__see-more">Читать далее >></a>
           </div>
         </article>
       </div>
