--- a/app/index.html
+++ b/app/index.html
@@ -13,16 +13,11 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa&amp;subset=cyrillic" rel="stylesheet">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="js/less.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
   <script src="js/main-slider.js" type="text/javascript"></script>
 
 </head>
 <body>
-
-
-
-
 
   <header class="page-header">
     <section class="header-top">
@@ -280,7 +275,7 @@
         </div>
     <section class="reasons">
         <div class="reason">
-            <div class="reason__cover"></div>
+            <div class="reason__cover"><div class="reason__cover__num">1</div></div>
             <div class="reason__description">
               <span class="reason__description__title">Причина №1
               <br>Высокий уровень сервиса</span>
